updated login script link

--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <script type="module" src="./src/js/login.js"></script>
   </head>
   <body class="bg-neutral-900">
     <main class="h-screen">
@@ -16,6 +17,7 @@
         >
           <div class="flex justify-end">
             <a href="./index.html">
+              <span class="sr-only">Close</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -34,7 +36,7 @@
           </div>
         </div>
         <div
-          class="flex h-96 flex-col justify-center gap-3 rounded-b-xl bg-neutral-50 p-5 md:p-12 2xl:p-16"
+          class="flex min-h-[24rem] flex-col justify-center gap-3 rounded-b-xl bg-neutral-50 p-5 md:p-12 2xl:p-16"
         >
           <div>
             <h1 class="text-2xl font-bold">Sign in</h1>
