--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <script type="module" src="./src/js/signup.js"></script>
   </head>
   <body class="bg-neutral-900">
     <main class="h-screen">
@@ -16,6 +17,7 @@
         >
           <div class="flex justify-end">
             <a href="./index.html">
+              <span class="sr-only">Close</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -34,7 +36,7 @@
           </div>
         </div>
         <div
-          class="flex h-96 flex-col justify-center gap-3 rounded-b-xl bg-neutral-50 p-5 md:p-12 2xl:p-16"
+          class="flex min-h-[24rem] flex-col justify-center gap-3 rounded-b-xl bg-neutral-50 p-5 md:p-12 2xl:p-16"
         >
           <div>
             <h1 class="text-2xl font-bold">Sign up</h1>
@@ -44,24 +46,28 @@
               <input
                 class="w-full rounded-md border border-neutral-300 px-3 py-2 placeholder:text-neutral-600"
                 type="text"
-                id="login-name"
+                id="signup-name"
                 placeholder="Name"
               />
+              <div class="hidden" id="signup-name-error"></div>
               <input
                 class="w-full rounded-md border border-neutral-300 px-3 py-2 placeholder:text-neutral-600"
                 type="email"
-                id="login-email"
+                id="signup-email"
                 placeholder="Email address"
               />
+              <div class="hidden" id="signup-email-error"></div>
               <input
                 class="w-full rounded-md border border-neutral-300 px-3 py-2 placeholder:text-neutral-600"
                 type="password"
-                id="login-password"
+                id="signup-password"
                 placeholder="Password"
               />
-              <div class="hidden" id="register-message"></div>
+              <div class="hidden" id="signup-password-error"></div>
+              <div class="hidden" id="signup-message"></div>
               <button
                 class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                id="signup-button"
               >
                 Sign up
               </button>
