--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <script type="module" src="./src/js/login.js"></script>
+    <script type="module" src="./src/js/pages/login/index.js"></script>
   </head>
   <body class="bg-neutral-900">
     <main class="h-screen">
