--- a/explore.html
+++ b/explore.html
@@ -56,7 +56,110 @@
             <div
               class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
               id="listings-container"
-            ></div>
+            >
+              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="flex flex-row gap-3 px-3 py-5" id="pagination-container">
             <button
