--- a/index.html
+++ b/index.html
@@ -99,6 +99,33 @@
         </div>
       </section>
 
+      <section id="hero-section" class="bg-neutral-50">
+        <div class="mx-auto max-w-6xl">
+          <div
+            class="flex min-h-[60vh] flex-col items-center justify-center gap-5 px-3 py-5"
+            id="hero-container"
+          >
+            <h1 class="text-center text-6xl font-bold">Welcome to SWIFTLY</h1>
+            <h2 class="text-center text-2xl font-medium">
+              Efficient bidding, seamless transactions and a trustworthy
+              community.
+            </h2>
+            <div class="flex flex-row gap-3">
+              <a
+                href="./login.html"
+                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                >Sign in</a
+              >
+              <a
+                href="./signup.html"
+                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                >Sign up</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section id="explore-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
           <div class="flex flex-col gap-3 px-3 py-5">
