added button hover effects, updated skeleton loaders and fixed missing style classes

--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
             <div class="flex flex-col md:flex-row" id="primary-navigation">
               <a
                 href="./index.html"
-                class="rounded-lg p-3 duration-200 hover:bg-neutral-200 md:py-2"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Home</a
               >
               <a
                 href="./explore.html"
-                class="rounded-lg p-3 duration-200 hover:bg-neutral-200 md:py-2"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Explore</a
               >
             </div>
             <div class="flex flex-col md:flex-row" id="secondary-navigation">
               <a
                 href="./login.html"
-                class="rounded-lg p-3 duration-200 hover:bg-neutral-200 md:py-2"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Log in</a
               >
               <a
                 href="./signup.html"
-                class="rounded-lg p-3 duration-200 hover:bg-neutral-200 md:py-2"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Sign up</a
               >
             </div>
@@ -103,7 +103,7 @@
                 />
               </div>
               <button
-                class="cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                class="cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
                 id="search-button"
               >
                 Search
@@ -112,7 +112,7 @@
           </div>
         </div>
       </section>
-      <section id="hero-section" class="bg-neutral-100">
+      <section id="hero-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
           <div
             class="flex min-h-[60vh] flex-col items-center justify-center gap-5 px-3 py-5"
@@ -126,12 +126,12 @@
             <div class="flex flex-row gap-3">
               <a
                 href="./login.html"
-                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
                 >Sign in</a
               >
               <a
                 href="./signup.html"
-                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
                 >Sign up</a
               >
             </div>
@@ -146,7 +146,7 @@
               class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
               id="listings-container"
             >
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -163,7 +163,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -180,7 +180,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -197,7 +197,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -214,7 +214,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -231,7 +231,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
