--- a/explore.html
+++ b/explore.html
@@ -5,13 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <script src="./src/js/components/nav.js" defer></script>
     <script type="module" src="./src/js/pages/explore/index.js"></script>
   </head>
   <body>
+    <header class="sticky left-0 top-0 z-20 bg-neutral-50 md:static">
+      <div class="mx-auto max-w-6xl">
+        <div class="flex min-h-[4rem] justify-between md:justify-normal">
+          <div class="flex items-center">
+            <a href="./index.html" class="px-3 py-2 font-bold">SWIFTLY</a>
+          </div>
+          <div class="flex items-center md:hidden">
+            <button
+              class="px-3 py-2"
+              id="navigation-button"
+              aria-controls="primary-navigation"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Menu</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 9h16.5m-16.5 6.75h16.5"
+                />
+              </svg>
+            </button>
+          </div>
+          <div
+            class="absolute left-0 top-16 hidden h-screen w-full items-center bg-neutral-50 md:static md:flex md:h-auto md:justify-between"
+            id="navigation-menu"
+          >
+            <div class="flex flex-col md:flex-row" id="primary-navigation">
+              <a
+                href="./index.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Home</a
+              >
+              <a
+                href="./explore.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Explore</a
+              >
+            </div>
+            <div class="flex flex-col md:flex-row" id="secondary-navigation">
+              <a
+                href="./login.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Log in</a
+              >
+              <a
+                href="./signup.html"
+                class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
+                >Sign up</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section id="search-section" class="bg-neutral-50">
         <div class="mx-auto max-w-6xl">
-          <div class="flex flex-col gap-3 px-3 pb-5">
+          <div class="px-3 pb-5">
             <form class="flex flex-row items-center gap-3">
               <div class="relative w-full">
                 <div
@@ -40,7 +103,7 @@
                 />
               </div>
               <button
-                class="cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                class="cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
                 id="search-button"
               >
                 Search
@@ -49,7 +112,6 @@
           </div>
         </div>
       </section>
-
       <section id="explore-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
           <div class="flex flex-col gap-3 px-3 py-5">
@@ -57,7 +119,7 @@
               class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
               id="listings-container"
             >
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -74,7 +136,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -91,7 +153,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -108,7 +170,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -125,7 +187,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -142,7 +204,109 @@
                   </div>
                 </div>
               </div>
-              <div class="flex flex-col gap-3 bg-neutral-100 p-3">
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
                 <div class="relative flex h-96 overflow-hidden rounded-md">
                   <div
                     class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
@@ -163,13 +327,13 @@
           </div>
           <div class="flex flex-row gap-3 px-3 py-5" id="pagination-container">
             <button
-              class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+              class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
               id="prev-button"
             >
               Prev
             </button>
             <button
-              class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+              class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
               id="next-button"
             >
               Next
