updated hero section and fixed footer spelling mistake

--- a/index.html
+++ b/index.html
@@ -114,26 +114,30 @@
       </section>
       <section id="hero-section" class="bg-white">
         <div class="mx-auto max-w-6xl">
-          <div
-            class="flex min-h-[60vh] flex-col items-center justify-center gap-5 px-3 py-5"
-            id="hero-container"
-          >
-            <h1 class="text-center text-6xl font-bold">Welcome to SWIFTLY</h1>
-            <h2 class="text-center text-2xl font-medium">
-              Efficient bidding, seamless transactions and a trustworthy
-              community.
-            </h2>
-            <div class="flex flex-row gap-3">
-              <a
-                href="./login.html"
-                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
-                >Sign in</a
-              >
-              <a
-                href="./signup.html"
-                class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
-                >Sign up</a
-              >
+          <div class="flex h-[50vh] max-h-[40rem] min-h-[30rem] px-3 py-5">
+            <div
+              class="flex h-full w-full flex-col items-center justify-center gap-5"
+              id="hero-container"
+            >
+              <h1 class="text-center text-4xl font-bold md:text-6xl">
+                Welcome to SWIFTLY
+              </h1>
+              <h2 class="text-center text-xl font-medium md:text-2xl">
+                Efficient bidding, seamless transactions and a trustworthy
+                community.
+              </h2>
+              <div class="flex flex-row gap-3">
+                <a
+                  href="./login.html"
+                  class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
+                  >Sign in</a
+                >
+                <a
+                  href="./signup.html"
+                  class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
+                  >Sign up</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -266,7 +270,7 @@
               <div class="flex flex-wrap justify-center">
                 <p class="whitespace-nowrap p-3 md:py-2">Privacy policy</p>
                 <p class="whitespace-nowrap p-3 md:py-2">Terms of service</p>
-                <p class="whitespace-nowrap p-3 md:py-2">Coockie preferences</p>
+                <p class="whitespace-nowrap p-3 md:py-2">Cookie preferences</p>
               </div>
             </div>
           </div>
