updated sign in text with log in text

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <a
                   href="./login.html"
                   class="flex w-fit cursor-pointer justify-center rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
-                  >Sign in</a
+                  >Log in</a
                 >
                 <a
                   href="./signup.html"
