added hover effects and updated sign in text with log in text

--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
           class="flex min-h-[24rem] flex-col justify-center gap-3 rounded-b-xl bg-neutral-50 p-5 md:p-12 2xl:p-16"
         >
           <div>
-            <h1 class="text-2xl font-bold">Sign in</h1>
+            <h1 class="text-2xl font-bold">Log in</h1>
           </div>
           <div>
             <form class="flex flex-col gap-3">
@@ -57,10 +57,10 @@
               />
               <div class="hidden" id="login-message"></div>
               <button
-                class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
                 id="login-button"
               >
-                Sign in
+                Log in
               </button>
             </form>
           </div>
@@ -68,7 +68,7 @@
             <p>
               Don't have an account?
               <a
-                class="font-bold text-black underline-offset-2 hover:underline"
+                class="font-bold text-black underline-offset-1 hover:underline"
                 href="./signup.html"
                 >Sign up</a
               >
