--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@
               <div class="hidden" id="signup-password-error"></div>
               <div class="hidden" id="signup-message"></div>
               <button
-                class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
+                class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
                 id="signup-button"
               >
                 Sign up
@@ -77,9 +77,9 @@
             <p>
               Have an account?
               <a
-                class="font-bold text-black underline-offset-2 hover:underline"
+                class="font-bold text-black underline-offset-1 hover:underline"
                 href="./login.html"
-                >Sign in</a
+                >Log in</a
               >
             </p>
           </div>
