--- a/profile-edit.html
+++ b/profile-edit.html
@@ -41,26 +41,21 @@
           <div>
             <h2 class="text-2xl font-bold">Edit profile</h2>
           </div>
-
           <div>
             <form class="flex flex-col gap-5">
               <div class="flex flex-col gap-2">
-                <!-- preview -->
                 <p>Preview</p>
-                <div class="flex flex-row justify-center">
-                  <!-- image wrapper -->
+                <div class="m-3 flex flex-row justify-center">
                   <div
                     class="relative aspect-square h-48 overflow-hidden rounded-full"
                     id="preview-container"
                   >
-                    <!-- image -->
                     <div
                       class="absolute h-full w-full overflow-hidden bg-neutral-300 object-cover"
                     ></div>
                   </div>
                 </div>
               </div>
-
               <div class="flex flex-col gap-2">
                 <label for="edit-avatar"
                   >Avatar
@@ -74,23 +69,20 @@
                   id="edit-avatar"
                   placeholder="URL"
                 />
-                <div class="hidden" id="edit-avatar-error"></div>
+                <div class="hidden" id="edit-message"></div>
               </div>
-
               <div class="flex justify-end gap-3">
                 <button
-                  class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white md:w-fit"
+                  class="w-full cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600 md:w-fit"
                   id="edit-update"
                 >
                   Update
                 </button>
-
-                <button
-                  class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white"
-                  id="edit-cancel"
+                <a
+                  href="./profile.html"
+                  class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
+                  >Cancel</a
                 >
-                  Cancel
-                </button>
               </div>
             </form>
           </div>
