updated titles and added descriptions to all pages

--- a/create.html
+++ b/create.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swiftly - Create listing</title>
+    <meta
+      name="description"
+      content="Create your own auctions and start earning credits."
+    />
     <link rel="stylesheet" href="./dist/css/main.css" />
     <script src="./src/js/components/nav.js" defer></script>
     <script type="module" src="./src/js/pages/create/index.js"></script>
