--- a/login.html
+++ b/login.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swiftly - Log in</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <meta name="description" content="Log in to Swiftly Auction." />
     <script type="module" src="./src/js/pages/login/index.js"></script>
   </head>
   <body class="bg-neutral-900">
