--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swiftly - Sign up</title>
+    <meta name="description" content="Sign up to Swiftly Auction." />
     <link rel="stylesheet" href="./dist/css/main.css" />
     <script type="module" src="./src/js/pages/signup/index.js"></script>
   </head>
