--- a/listing.html
+++ b/listing.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swiftly - Listing specific</title>
+    <meta name="description" content="View details about a specific auction." />
     <link rel="stylesheet" href="./dist/css/main.css" />
     <script src="./src/js/components/nav.js" defer></script>
     <script type="module" src="./src/js/pages/listing/index.js"></script>
