--- a/profile-edit.html
+++ b/profile-edit.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swiftly - Edit profile</title>
+    <meta name="description" content="Edit your profile details." />
     <link rel="stylesheet" href="./dist/css/main.css" />
     <script type="module" src="./src/js/pages/profile-edit/index.js"></script>
   </head>
