added aria-labels for accessibility

--- a/listing.html
+++ b/listing.html
@@ -14,7 +14,12 @@
       <div class="mx-auto max-w-6xl">
         <div class="flex min-h-[4rem] justify-between md:justify-normal">
           <div class="flex items-center">
-            <a href="./index.html" class="px-3 py-2 font-bold">SWIFTLY</a>
+            <a
+              href="./index.html"
+              aria-label="SWIFTLY"
+              class="px-3 py-2 font-bold"
+              >SWIFTLY</a
+            >
           </div>
           <div class="flex items-center md:hidden">
             <button
@@ -47,11 +52,13 @@
             <div class="flex flex-col md:flex-row" id="primary-navigation">
               <a
                 href="./index.html"
+                aria-label="Home"
                 class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Home</a
               >
               <a
                 href="./explore.html"
+                aria-label="Explore"
                 class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Explore</a
               >
@@ -59,11 +66,13 @@
             <div class="flex flex-col md:flex-row" id="secondary-navigation">
               <a
                 href="./login.html"
+                aria-label="Log in"
                 class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Log in</a
               >
               <a
                 href="./signup.html"
+                aria-label="Sign up"
                 class="rounded-lg p-3 transition duration-200 hover:bg-neutral-200 md:py-2"
                 >Sign up</a
               >
