updated nav component linking to be module

--- a/listing.html
+++ b/listing.html
@@ -6,7 +6,7 @@
     <title>Swiftly - Listing specific</title>
     <meta name="description" content="View details about a specific auction." />
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <script src="./src/js/components/nav.js" defer></script>
+    <script type="module" src="./src/js/components/nav.js"></script>
     <script type="module" src="./src/js/pages/listing/index.js"></script>
   </head>
   <body class="flex min-h-screen flex-col">
