--- a/create.html
+++ b/create.html
@@ -9,7 +9,7 @@
       content="Create your own auctions and start earning credits."
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <script src="./src/js/components/nav.js" defer></script>
+    <script type="module" src="./src/js/components/nav.js"></script>
     <script type="module" src="./src/js/pages/create/index.js"></script>
   </head>
   <body class="flex min-h-screen flex-col">
