--- a/explore.html
+++ b/explore.html
@@ -9,7 +9,7 @@
       content="Explore all the existing auctions from our community."
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <script src="./src/js/components/nav.js" defer></script>
+    <script type="module" src="./src/js/components/nav.js"></script>
     <script type="module" src="./src/js/pages/explore/index.js"></script>
   </head>
   <body class="flex min-h-screen flex-col">
