--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Efficient bidding, seamless transactions and a trustworthy community."
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <script src="./src/js/components/nav.js" defer></script>
+    <script type="module" src="./src/js/components/nav.js"></script>
     <script type="module" src="./src/js/pages/index/index.js"></script>
   </head>
   <body class="flex min-h-screen flex-col">
