--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <title>Swiftly - Profile</title>
     <meta name="description" content="View details about your profile." />
     <link rel="stylesheet" href="./dist/css/main.css" />
-    <script src="./src/js/components/nav.js" defer></script>
+    <script type="module" src="./src/js/components/nav.js"></script>
     <script type="module" src="./src/js/pages/profile/index.js"></script>
   </head>
   <body class="flex min-h-screen flex-col">
