added listings section with skeleton loader

--- a/profile.html
+++ b/profile.html
@@ -119,6 +119,130 @@
           </div>
         </div>
       </section>
+      <section id="listings-section" class="bg-white">
+        <div class="mx-auto max-w-6xl">
+          <div class="flex flex-col gap-3 px-3 py-5">
+            <div
+              class="grid auto-rows-fr gap-3 sm:grid-cols-2 lg:grid-cols-3"
+              id="listings-container"
+            >
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col gap-3 rounded-md bg-neutral-50 p-3">
+                <div class="relative flex h-96 overflow-hidden rounded-md">
+                  <div
+                    class="absolute h-full w-full animate-pulse overflow-hidden rounded-lg bg-neutral-300 object-cover"
+                  ></div>
+                </div>
+                <div class="flex flex-col">
+                  <div class="flex flex-col gap-3">
+                    <div
+                      class="h-10 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                    <div
+                      class="h-5 animate-pulse rounded-md bg-neutral-300"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="flex flex-row justify-center gap-3 px-3 py-5"
+              id="pagination-container"
+            >
+              <button
+                class="w-fit cursor-pointer rounded-md bg-neutral-900 px-3 py-2 font-bold text-white transition duration-200 hover:bg-neutral-600"
+                id="load-button"
+              >
+                Load more
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="mt-auto">
       <div class="bg-neutral-50">
